# dpp

./: .gitignore  README.md  pyproject.toml
data/: load_data.py
eda/: eda.ipynb  eda_diabetes_classes.ipynb
model_training/: base_line_model.ipynb  base_line_smote.ipynb
